--- a/home.html
+++ b/home.html
@@ -9,10 +9,11 @@
     <body onload="HideUI()">
     
       <!-- LOGIN SCREEN -->
-      <div id="login_div" class="main-div" onload="LoggedIn()" style="display: none;">
+      <div id="login_div" class="main-div" style="display: none;">
         <div>
           <div class="panel">
               <h3 class="login-title">Home Page</h3>
+              <p id="email" style="text-align: center;"></p>
               <button class="button-spacing" onclick="SignOut()">Sign Out</button>
           </div>
         </div>
