--- a/pages/change-password/change-password.html
+++ b/pages/change-password/change-password.html
@@ -11,31 +11,26 @@
   <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
 
   <!-- Favicon -->
-  <link href="assets/img/favicon.png" rel="icon" type="image/x-icon" />
+  <link href="/assets/img/favicon.png" rel="icon" type="image/x-icon" />
 
   <!-- Stylesheets -->
-  <link rel="stylesheet" href="assets/css/global.css" />
-  <link rel="stylesheet" href="main.css" />
+  <link rel="stylesheet" href="../../assets/css/global.css" />
 
   <!-- Title -->
-  <title>Staff Track - Home</title>
+  <title>Staff Track - Change Password</title>
 </head>
 
-<body onload="HideUI()" id="body">
+<body>
 
-  <!-- Navigation Bar -->
-  <div id="ui-content" style="display: none;">
-    <div class="navbar">
-      <a>Link</a>
-      <a>Link</a>
-      <div class="dropdown" style="float:right;">
-        <button class="dropbtn"><i style="font-size: 22px;" class="fa fa-user-circle"></i></button>
-        <div class="dropdown-content">
-          <a onclick="ShowAccounts()">Account</a>
-          <a onclick="ShowSettings()">Settings</a>
-          <a onclick="SignOut()">Log Out</a>
-        </div>
-      </div>
+  <!-- Reset Password Section -->
+  <div id="login_div" class="main-div">
+    <div class="panel">
+      <h3 class="login-title">Reset Password</h3>
+      <input type="password" placeholder="Password..." id="password_field" />
+      <input type="password" placeholder="Confirm Password..." id="confirm_field" />
+      <button id="resetpass" class="button-spacing" onclick="ResetPassword()">Send Reset Code</button>
+      <p id="error" class="error-red"></p>
+      <p class="text">Nevermind, <span class="text-btn" onclick="ShowLogin()">Go back</span></p>
     </div>
   </div>
 
