Minor UI Changes
Changes to button colour and background of home page. Link was changed on forgot password page to take up all text for easier accessibility.

--- a/index.html
+++ b/index.html
@@ -21,21 +21,20 @@
   <title>Staff Track - Home</title>
 </head>
 
-<body onload="HideUI()" id="body">
+<body onload="HideUI()">
 
   <!-- Navigation Bar -->
   <div id="ui-content" style="display: none;">
     <div class="navbar">
       <a>Link</a>
       <a>Link</a>
-      <div class="dropdown" style="float:right;">
-        <button class="dropbtn"><i style="font-size: 22px;" class="fa fa-user-circle"></i></button>
-        <div class="dropdown-content">
-          <a onclick="ShowAccounts()">Account</a>
-          <a onclick="ShowSettings()">Settings</a>
-          <a onclick="SignOut()">Log Out</a>
-        </div>
-      </div>
+          <div class="dropdown" style="float:right;">
+            <button class="dropbtn"><i style="font-size: 22px;" class="fa fa-user-circle"></i></button>
+            <div class="dropdown-content">
+              <a onclick="ShowAccounts()">Account</a>
+              <a onclick="SignOut()">Log Out</a>
+            </div>
+          </div>
     </div>
   </div>
 
