--- a/pages/reset-password/index.html
+++ b/pages/reset-password/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
 
   <!-- Favicon -->
-  <link href="/assets/img/favicon.png" rel="icon" type="image/x-icon" />
+  <link href="../../assets/img/favicon.png" rel="icon" type="image/x-icon" />
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="../../assets/css/global.css" />
@@ -30,7 +30,7 @@
       <input type="email" placeholder="Email..." id="email_field" />
       <button id="resetpass" class="button-spacing" onclick="ResetPassword()">Send Reset Code</button>
       <p id="error" class="error-red"></p>
-      <p class="text">Nevermind, <span class="text-btn" onclick="ShowLogin()">Go back</span></p>
+      <p class="text-btn" onclick="ShowLogin()">Nevermind, Go back</p>
     </div>
   </div>
 
