--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
 
   <!-- Favicon -->
-  <link href="/assets/img/favicon.png" rel="icon" type="image/x-icon" />
+  <link href="../../assets/img/favicon.png" rel="icon" type="image/x-icon" />
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="../../assets/css/global.css" />
